# LoveDove

./: README.md  admin.py  database.py  email_service.py  lovedove.json  main.py  pyproject.toml
static/: admin.html  index.html  profile.html  register.html
