[project]
name = "lovedove"
version = "0.1.0"
description = "API to help you find out if someone is in love with you"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
